# weird-noises-intelligence

./: .env.example  .gitignore  .mcp.json  App.jsx  BUILDLOG.md  CLAUDE.md  SETUP.md  app.py  index.html  intelligence.code-workspace  main.jsx  package-lock.json  package.json  pyproject.toml  vite.config.js
docs/: ai-discovery.md  architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/pages/: Home.jsx
frontend/src/skeleton/: SkeletonPage.jsx
frontend/src/styles/: design-system.css
producers/: GAPS-REMAINING.md
producers/backend/: ai.py  interface.py  jobs.py  models.py  prompts.py  routes.py
producers/frontend/: api.js
producers/frontend/components/: OrganizationDrawer.jsx  ProducerHeader.jsx  ProducerHistory.jsx  ProducerInteractions.jsx  ProducerOrganizations.jsx  (+3 more)
producers/scripts/: seed_data.py  seed_data.yml  seed_test_data.py
scripts/: reset_db.py  seed_data.py  seed_data.yml  seed_slate_data.py  seed_slate_data.yml  seed_slate_test_data.py  seed_test_data.py  setup_db.py
shared/backend/: config.py  db.py  mcp.py  registry.py  scheduler.py
skeleton_a/backend/: interface.py  jobs.py  models.py  routes.py
skeleton_b/backend/: interface.py
slate/backend/: ai.py  interface.py  models.py  routes.py
slate/frontend/: api.js
slate/scripts/: seed_data.py  seed_data.yml  seed_test_data.py
specs/: 1-shared-infra.md  2-producers.md  3-slate.md  design-system-additions-prompt.md  weird-noises-intelligence-MAIN.md
specs/mockups/: design-system.html
(+96 files in other folders)
